--- a/package.json
+++ b/package.json
@@ -39,101 +39,97 @@
     "formatcodes": "prettier --write \"./src/**/*.js\""
   },
   "dependencies": {
-    "classnames": "^2.2.5",
+    "classnames": "^2.3.1",
     "lodash.range": "^3.2.0",
-    "moment-jalaali": "0.9.1",
+    "moment-jalaali": "0.9.2",
     "moment-range": "^4.0.2",
     "prop-types": "^15.7.2",
-    "rc-trigger": "3.0.0",
-    "react-onclickoutside": "^6.8.0",
-    "react-tether": "^2.0.0",
-    "react-with-styles": "4.1.0"
+    "rc-trigger": "5.2.10",
+    "react-onclickoutside": "^6.12.0",
+    "react-tether": "^2.0.8"
   },
   "devDependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.5",
-    "@babel/plugin-external-helpers": "^7.2.0",
-    "@babel/plugin-proposal-class-properties": "^7.4.4",
-    "@babel/plugin-proposal-decorators": "^7.4.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
-    "@babel/plugin-transform-modules-commonjs": "^7.4.4",
-    "@babel/plugin-transform-object-assign": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.4.4",
-    "@babel/preset-env": "^7.4.5",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/preset-stage-0": "^7.0.0",
-    "@babel/runtime": "^7.4.5",
-    "autoprefixer": "^9.5.1",
+    "@babel/cli": "^7.15.7",
+    "@babel/core": "^7.15.5",
+    "@babel/plugin-external-helpers": "^7.14.5",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/plugin-proposal-decorators": "^7.15.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.15.6",
+    "@babel/plugin-transform-modules-commonjs": "^7.15.4",
+    "@babel/plugin-transform-object-assign": "^7.14.5",
+    "@babel/plugin-transform-runtime": "^7.15.0",
+    "@babel/preset-env": "^7.15.6",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-stage-0": "^7.8.3",
+    "@babel/runtime": "^7.15.4",
+    "autoprefixer": "^10.3.6",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-module-resolver": "^3.2.0",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
-    "babel-polyfill": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-es2016": "^6.22.0",
-    "babel-preset-next": "^1.2.0",
-    "babel-preset-stage-0": "^6.22.0",
-    "babel-runtime": "^6.23.0",
-    "clean-css-cli": "^4.3.0",
-    "coveralls": "^2.12.0",
-    "css-loader": "^2.1.1",
-    "cypress": "^5.0.0",
-    "enzyme": "^2.9.1",
-    "enzyme-adapter-react-16": "^1.13.1",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^4.3.0",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react": "^7.13.0",
-    "file-loader": "^3.0.1",
-    "highlight.js": "^9.10.0",
-    "html-webpack-plugin": "^3.2.0",
+    "babel-preset-next": "^1.4.0",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-runtime": "^6.26.0",
+    "clean-css-cli": "^5.3.3",
+    "coveralls": "^3.1.1",
+    "css-loader": "^6.3.0",
+    "cypress": "^8.5.0",
+    "enzyme": "^3.11.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.26.0",
+    "file-loader": "^6.2.0",
+    "highlight.js": "^11.2.0",
+    "html-webpack-plugin": "^5.3.2",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^24.8.0",
-    "jest-enzyme": "^7.0.2",
+    "jest": "^27.2.3",
+    "jest-enzyme": "^7.1.2",
     "jscoverage": "^0.6.0",
-    "mini-css-extract-plugin": "^0.6.0",
+    "mini-css-extract-plugin": "^2.3.0",
     "minicat": "^1.0.0",
-    "moment": "^2.18.1",
-    "node-sass": "^4.12.0",
+    "moment": "^2.29.1",
+    "node-sass": "^6.0.1",
     "nodeunit": "^0.11.0",
     "npm-run-all": "^4.1.5",
     "path": "^0.12.7",
-    "postcss-cli": "^6.1.2",
-    "postcss-loader": "^3.0.0",
-    "prettier": "^1.18.2",
-    "react": "^16.8.4",
-    "react-addons-test-utils": "^15.4.2",
-    "react-dom": "^16.8.4",
-    "react-parallax": "^2.2.0",
+    "postcss-cli": "^9.0.1",
+    "postcss-loader": "^6.1.1",
+    "prettier": "^2.4.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-parallax": "^3.3.0",
     "react-sticky": "^6.0.3",
-    "react-switch": "^4.1.0",
-    "react-syntax-highlight": "^15.3.1",
-    "react-test-renderer": "^16.8.4",
-    "rollup": "2.6.0",
+    "react-switch": "^6.0.0",
+    "react-test-renderer": "^17.0.2",
+    "rollup": "2.57.0",
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-commonjs": "10.1.0",
-    "rollup-plugin-filesize": "^6.2.1",
+    "rollup-plugin-filesize": "^9.1.1",
     "rollup-plugin-local-resolve": "^1.0.7",
     "rollup-plugin-node-globals": "^1.4.0",
     "rollup-plugin-node-resolve": "5.2.0",
-    "rollup-plugin-peer-deps-external": "^2.2.0",
-    "rollup-plugin-postcss": "^2.0.3",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.1",
     "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-terser": "^5.1.3",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1",
-    "webpack": "^4.32.2",
-    "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.4.1",
-    "webpack-node-externals": "^1.7.2"
+    "rollup-plugin-terser": "^7.0.2",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.3.0",
+    "webpack": "^5.54.0",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.3.0",
+    "webpack-node-externals": "^3.0.0"
   },
   "peerDependencies": {
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "browserslist": [
     "last 2 versions"
