--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "build:css": "npm run compile && npm run prefix && npm run minify",
     "compile": "node-sass --output-style=expanded --source-map=true src/styles/style.scss src/styles/style.css",
     "prefix": "postcss src/styles/style.css --use=autoprefixer --map=false --output=src/styles/style.css",
-    "minify": "cleancss --level=1 --source-map --source-map-inline-sources --output src/style.min.css src/styles/style.css",
+    "minify": "cleancss --source-map --source-map-inline-sources --output src/style.min.css src/styles/style.css",
     "lint": "eslint src --fix",
     "formatcodes": "prettier --write \"./src/**/*.js\""
   },
