--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-datepicker2",
-  "version": "v3.3.14",
+  "version": "v3.3.15",
   "description": "react datepicker component. (include persian jalaali calendar)",
   "main": "dist/umd/index.js",
   "types": "dist/types/index.d.ts",
@@ -41,7 +41,7 @@
   "dependencies": {
     "classnames": "^2.3.1",
     "lodash.range": "^3.2.0",
-    "moment-jalaali": "0.9.2",
+    "moment-jalaali": "github:omnitired/moment-jalaali",
     "moment-range": "^4.0.2",
     "prop-types": "^15.7.2",
     "rc-trigger": "5.2.10",
@@ -95,7 +95,7 @@
     "jscoverage": "^0.6.0",
     "mini-css-extract-plugin": "^2.3.0",
     "minicat": "^1.0.0",
-    "moment": "^2.22.2",
+    "moment": "^2.29.1",
     "node-sass": "^6.0.1",
     "nodeunit": "^0.11.0",
     "npm-run-all": "^4.1.5",
